fix(rdv): Spacing between chevron and filename

--- a/code-review-management/app/(pages)/[username]/[repo_name]/pull/[id]/changes/_components/FileDiffHeader/FileDiffHeader.module.css
+++ b/code-review-management/app/(pages)/[username]/[repo_name]/pull/[id]/changes/_components/FileDiffHeader/FileDiffHeader.module.css
@@ -4,7 +4,7 @@
 
     display: flex;
     align-items: center;
-    gap: var(--spacer-4);
+    gap: var(--spacer-8);
 
     padding: var(--spacer-10) var(--spacer-12);
     border-bottom: var(--border-thin-width) solid var(--border-gray);
